# cresnextws

./: .gitignore  DataEventManager_README.md  README.md  __init__.py  data_event_manager_example.py  example_auto_restart.py  example_health_check_path.py  examples.py  pyproject.toml  requirements.txt  test_nested_message.py
.github/workflows/: ci.yml  publish-to-pypi.yml
cresnextws/: __init__.py  client.py  data_event_manager.py
tests/: __init__.py  conftest.py  services.example.json  test_1005_error_handling.py  test_client.py  test_data_event_manager.py  test_health_check.py  test_integration.py
