[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cresnextws"
version = "0.1.0"
authors = [
    {name = "Jetson Controls"},
]
description = "Crestron CresNext WebSocket API Client"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Hardware :: Hardware Drivers",
]
keywords = ["crestron", "cresnext", "websocket", "api", "client"]
dependencies = [
    "websockets>=11.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[project.urls]
"Homepage" = "https://github.com/jetsoncontrols/cresnextws"
"Bug Reports" = "https://github.com/jetsoncontrols/cresnextws/issues"
"Source" = "https://github.com/jetsoncontrols/cresnextws"

[tool.setuptools.packages.find]
where = ["."]
include = ["cresnextws*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true